download issue fixed